feat: Add NOK to patient's storage